--- a/frontend/src/components/auth/auth-form/AuthForm.css
+++ b/frontend/src/components/auth/auth-form/AuthForm.css
@@ -55,6 +55,10 @@
   box-shadow: 0 0 0 2px rgba(52, 152, 219, 0.2);
 }
 
+.input-error-message{
+    color: #e74c3c;
+}
+
 .auth-button {
   background-color: #3498db;
   color: white;
@@ -76,11 +80,6 @@
   border-color: #e74c3c !important;
 }
 
-.error-message {
-  color: #e74c3c;
-  font-size: 0.85rem;
-}
-
 .auth-button:disabled {
   background-color: #95a5a6;
   cursor: not-allowed;
@@ -91,16 +90,6 @@
   transform: none;
 }
 
-.auth-error {
-  color: white;
-  font-size: 14px;
-  margin-bottom: 0.5rem;
-  background-color: #e74c3c;
-  padding: 0.5rem;
-  border-radius: 3px;
-}
-
-/* Tombol Login Google */
 .google-button {
   display: flex;
   align-items: center;
